--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0']
+        ruby-version: ['2.7', '3.0', '3.1', '3.2']
 
     steps:
       - uses: actions/checkout@v2
@@ -22,9 +22,9 @@ jobs:
           bundler-cache: true
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
       - name: Run prettier
-        run: npm i -g yarn && yarn && yarn lint
+        run: npm ci && npm run lint
       - name: Run Rubocop
         run: bundle exec rubocop
       - name: Run tests
