--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Gem Build and Release
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: Gem / Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,3 +30,27 @@ jobs:
         run: bundle exec rubocop
       - name: Run tests
         run: bundle exec rspec
+
+  release:
+    name: Gem / Release
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - uses: fac/ruby-gem-setup-credentials-action@v2
+        with:
+          user: ''
+          key: rubygems
+          token: ${{ secrets.RUBYGEMS_API_KEY }}
+      - name: Build Gem
+        run: bundle exec rake build
+      - name: Release Gem
+        if: github.ref == 'refs/heads/master'
+        uses: fac/ruby-gem-push-action@v2
+        with:
+          key: rubygems
