--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Gem Build and Release
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   test:
@@ -50,7 +50,7 @@ jobs:
       - name: Build Gem
         run: bundle exec rake build
       - name: Release Gem
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         uses: fac/ruby-gem-push-action@v2
         with:
           key: rubygems
