--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@ AllCops:
     - Guardfile
     - bin/*
     - tmp/**/*
-  TargetRubyVersion: 3.0
+  TargetRubyVersion: 3.2
   NewCops: enable
 
 Style:
@@ -66,7 +66,7 @@ Metrics/ModuleLength:
     - 'spec/**/*.rb'
     - 'test/**/*.rb'
 
-require:
+plugins:
   - rubocop-rspec
   - rubocop-rake
 
